<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/panel_x"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/panel_x" />

    <TextView
        android:id="@+id/panel_y"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/panel_x"
        android:text="@string/panel_y" />
    
    <TextView
        android:id="@+id/acc_x"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/panel_y"
        android:layout_marginTop="50dp"
        android:text="@string/acc_x" />
    
    <TextView
        android:id="@+id/acc_y"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/acc_x"
        android:text="@string/acc_y" />
    
    <TextView
        android:id="@+id/acc_z"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/acc_y"
        android:text="@string/acc_z" />

    <TextView
        android:id="@+id/acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/acc_z" 
        android:text="@string/acc" />

    <TextView
        android:id="@+id/acc_max"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/acc"
        android:text="@string/acc_max" />

    <TextView
        android:id="@+id/acc_min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/acc_max"
        android:text="@string/acc_min" />

    <TextView
        android:id="@+id/timestamp_delta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/acc_min" 
        android:text="@string/timestamp_delta" />

    <TextView
        android:id="@+id/timestamp_delta_min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/timestamp_delta"
        android:text="@string/timestamp_delta_min" />

    <TextView
        android:id="@+id/discription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/timestamp_delta_min"
        android:layout_marginTop="10dp"
        android:text="@string/discription" />
    
    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/button_reset" />

    <Button
        android:id="@+id/data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/button_data_start" />
        
</RelativeLayout>

